Basic setup for testing gamesite

--- a/pages/gameinfo.html
+++ b/pages/gameinfo.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Site</title>
+    <title>game info page</title>
 </head>
 <body>
-    <h1>Hallowed Veil: The Last Prince</h1>
+    <h1> Game Information</h1>
 
-    <a href="pages/gameinfo.html">Game Information</a>
+    <P> This game will be available through Steam.</P>
+
+    <a href="../index.html">Home</a>
+    
 </body>
 </html>
